[gd_scene load_steps=3 format=3 uid="uid://ctrd2c74fom4t"]

[ext_resource type="Script" path="res://src/common/debug/debug_panel.gd" id="1_ihtat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvt4n"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="DebugPanel" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -109.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kvt4n")
script = ExtResource("1_ihtat")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MusicTensionToggle" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Swap Music"

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NextLevel" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
text = "Next Level"

[node name="WinGame" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
text = "Win Game"

[connection signal="pressed" from="VBoxContainer/MusicTensionToggle" to="." method="_on_music_tension_toggle_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/WinGame" to="." method="_on_win_game_pressed"]
